--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "gatsby": "^2.0.53",
   "gatsby-image": "^2.0.20",
   "gatsby-plugin-catch-links": "^2.0.9",
+  "gatsby-plugin-favicon": "^3.1.5",
   "gatsby-plugin-google-analytics": "^2.0.8",
   "gatsby-plugin-manifest": "^2.0.9",
   "gatsby-plugin-offline": "^2.0.20",
