--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
- "name": "gatsby-starter-default",
- "description": "Gatsby default starter",
+ "name": "gbbns.co",
+ "description": "Chris Gibbons - Principal UI/front end developer & UX technologist",
  "version": "1.0.0",
- "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+ "author": {
+	"name": "Chris Gibbons",
+	"email": "chris@gbbns.co",
+	"url": "https://gbbns.co"
+},
  "dependencies": {
   "gatsby": "^2.0.53",
   "gatsby-image": "^2.0.20",
@@ -52,6 +56,6 @@
  },
  "repository": {
   "type": "git",
-  "url": "https://github.com/gatsbyjs/gatsby-starter-default"
+  "url": "https://github.com/gbbns/gatsby.gbbns.co.git"
  }
 }
