--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "gatsby-plugin-sass": "^2.0.0-rc.2",
   "gatsby-plugin-sharp": "^2.0.14",
   "gatsby-plugin-sitemap": "^2.0.4",
+  "gatsby-plugin-web-font-loader": "^1.0.4",
   "gatsby-source-filesystem": "^2.0.8",
   "gatsby-transformer-remark": "^2.1.17",
   "gatsby-transformer-sharp": "^2.1.8",
