--- a/package.json
+++ b/package.json
@@ -8,21 +8,21 @@
   "url": "https://gbbns.co"
  },
  "dependencies": {
-  "gatsby": "^2.0.53",
-  "gatsby-image": "^2.0.20",
+  "gatsby": "^2.0.91",
+  "gatsby-image": "^2.0.26",
   "gatsby-plugin-catch-links": "^2.0.9",
   "gatsby-plugin-favicon": "^3.1.5",
-  "gatsby-plugin-google-analytics": "^2.0.8",
-  "gatsby-plugin-manifest": "^2.0.9",
-  "gatsby-plugin-offline": "^2.0.20",
-  "gatsby-plugin-react-helmet": "^3.0.2",
-  "gatsby-plugin-sass": "^2.0.0-rc.2",
-  "gatsby-plugin-sharp": "^2.0.14",
+  "gatsby-plugin-google-analytics": "^2.0.9",
+  "gatsby-plugin-manifest": "^2.0.13",
+  "gatsby-plugin-offline": "^2.0.21",
+  "gatsby-plugin-react-helmet": "^3.0.5",
+  "gatsby-plugin-sass": "^2.0.7",
+  "gatsby-plugin-sharp": "^2.0.17",
   "gatsby-plugin-sitemap": "^2.0.4",
   "gatsby-plugin-web-font-loader": "^1.0.4",
-  "gatsby-source-filesystem": "^2.0.8",
-  "gatsby-transformer-remark": "^2.1.17",
-  "gatsby-transformer-sharp": "^2.1.8",
+  "gatsby-source-filesystem": "^2.0.16",
+  "gatsby-transformer-remark": "^2.2.0",
+  "gatsby-transformer-sharp": "^2.1.10",
   "node-sass": "^4.11.0",
   "prop-types": "^15.6.2",
   "react": "^16.6.3",
@@ -34,18 +34,14 @@
  ],
  "devDependencies": {
   "@commitlint/config-conventional": "^6.1.3",
-  "@commitlint/prompt-cli": "^7.0.0",
+  "@commitlint/prompt-cli": "^7.3.1",
   "commitlint": "^6.2.0",
-  "husky": "^1.3.0",
+  "husky": "^1.3.1",
   "prettier": "^1.15.3"
  },
  "license": "MIT",
  "scripts": {
   "build": "gatsby build",
-  "commit": "commit",
-  "commitmsg": "commitlint -e $GIT_PARAMS",
-  "format": "prettier --write 'src/**/*.js'",
-  "precommit": "yarn run format",
   "start": "gatsby develop",
   "nuke": "npm run delete:node_modules",
   "delete:node_modules": "rm -rf node_modules",
