--- a/package.json
+++ b/package.json
@@ -8,26 +8,28 @@
   "url": "https://gbbns.co"
  },
  "dependencies": {
-  "gatsby": "^2.0.103",
+  "gatsby": "^2.0.117",
+  "gatsby-cli": "^2.4.9",
   "gatsby-image": "^2.0.29",
-  "gatsby-plugin-catch-links": "^2.0.9",
+  "gatsby-plugin-catch-links": "^2.0.10",
   "gatsby-plugin-favicon": "^3.1.5",
-  "gatsby-plugin-google-analytics": "^2.0.12",
-  "gatsby-plugin-manifest": "^2.0.14",
-  "gatsby-plugin-offline": "^2.0.22",
-  "gatsby-plugin-react-helmet": "^3.0.5",
+  "gatsby-plugin-google-analytics": "^2.0.13",
+  "gatsby-plugin-manifest": "^2.0.17",
+  "gatsby-plugin-offline": "^2.0.23",
+  "gatsby-plugin-react-helmet": "^3.0.6",
   "gatsby-plugin-remove-serviceworker": "^1.0.0",
-  "gatsby-plugin-sass": "^2.0.8",
-  "gatsby-plugin-sharp": "^2.0.18",
-  "gatsby-plugin-sitemap": "^2.0.4",
+  "gatsby-plugin-sass": "^2.0.10",
+  "gatsby-plugin-sharp": "^2.0.20",
+  "gatsby-plugin-sitemap": "^2.0.5",
+  "gatsby-plugin-twitter": "^2.0.9",
   "gatsby-plugin-web-font-loader": "^1.0.4",
-  "gatsby-source-filesystem": "^2.0.18",
-  "gatsby-transformer-remark": "^2.2.1",
-  "gatsby-transformer-sharp": "^2.1.12",
+  "gatsby-source-filesystem": "^2.0.20",
+  "gatsby-transformer-remark": "^2.2.4",
+  "gatsby-transformer-sharp": "^2.1.13",
   "node-sass": "^4.11.0",
   "prop-types": "^15.6.2",
-  "react": "^16.6.3",
-  "react-dom": "^16.6.3",
+  "react": "^16.8.1",
+  "react-dom": "^16.8.1",
   "react-helmet": "^5.2.0"
  },
  "keywords": [
@@ -35,10 +37,14 @@
  ],
  "devDependencies": {
   "@commitlint/config-conventional": "^6.1.3",
-  "@commitlint/prompt-cli": "^7.3.1",
+  "@commitlint/prompt-cli": "^7.5.0",
   "commitlint": "^6.2.0",
+  "gatsby-plugin-netlify": "^2.0.9",
+  "gatsby-plugin-netlify-cms": "^3.0.12",
+  "gatsby-plugin-purgecss": "^3.1.0",
   "husky": "^1.3.1",
-  "prettier": "^1.16.1"
+  "netlify-cms": "^2.3.3",
+  "prettier": "^1.16.4"
  },
  "license": "MIT",
  "scripts": {
