--- a/package.json
+++ b/package.json
@@ -1,66 +1,76 @@
 {
- "name": "gbbns.co",
- "description": "Chris Gibbons - Principal UI/front end developer & UX technologist",
- "version": "1.0.0",
- "author": {
-  "name": "Chris Gibbons",
-  "email": "chris@gbbns.co",
-  "url": "https://gbbns.co"
- },
- "dependencies": {
-  "gatsby": "^2.1.18",
-  "gatsby-cli": "^2.4.11",
-  "gatsby-image": "^2.0.30",
-  "gatsby-plugin-catch-links": "^2.0.11",
-  "gatsby-plugin-favicon": "^3.1.5",
-  "gatsby-plugin-google-analytics": "^2.0.14",
-  "gatsby-plugin-manifest": "^2.0.19",
-  "gatsby-plugin-offline": "^2.0.24",
-  "gatsby-plugin-react-helmet": "^3.0.7",
-  "gatsby-plugin-remove-serviceworker": "^1.0.0",
-  "gatsby-plugin-sass": "^2.0.10",
-  "gatsby-plugin-sharp": "^2.0.22",
-  "gatsby-plugin-sitemap": "^2.0.6",
-  "gatsby-plugin-twitter": "^2.0.9",
-  "gatsby-plugin-web-font-loader": "^1.0.4",
-  "gatsby-source-filesystem": "^2.0.23",
-  "gatsby-transformer-remark": "^2.2.6",
-  "gatsby-transformer-sharp": "^2.1.14",
-  "node-sass": "^4.11.0",
-  "prop-types": "^15.7.2",
-  "react": "^16.8.3",
-  "react-dom": "^16.8.3",
-  "react-helmet": "^5.2.0"
- },
- "keywords": [
-  "gatsby"
- ],
- "devDependencies": {
-  "@commitlint/config-conventional": "^6.1.3",
-  "@commitlint/prompt-cli": "^7.5.0",
-  "commitlint": "^6.2.0",
-  "gatsby-plugin-netlify": "^2.0.11",
-  "gatsby-plugin-netlify-cms": "^3.0.12",
-  "gatsby-plugin-purgecss": "^3.1.0",
-  "husky": "^1.3.1",
-  "netlify-cms": "^2.4.2",
-  "prettier": "^1.16.4"
- },
- "license": "MIT",
- "scripts": {
-  "build": "gatsby build",
-  "start": "gatsby develop",
-  "nuke": "npm run delete:node_modules",
-  "delete:node_modules": "rm -rf node_modules",
-  "test": "echo \"Error: no test specified\" && exit 1"
- },
- "commitlint": {
-  "extends": [
-   "./@commitlint/config-conventional"
-  ]
- },
- "repository": {
-  "type": "git",
-  "url": "https://github.com/gbbns/gatsby.gbbns.co.git"
- }
+  "name": "gbbns.co",
+  "description": "Chris Gibbons - Principal UI/front end developer & UX technologist",
+  "version": "1.0.0",
+  "author": {
+    "name": "Chris Gibbons",
+    "email": "chris@gbbns.co",
+    "url": "https://gbbns.co"
+  },
+  "dependencies": {
+    "gatsby": "^2.1.18",
+    "gatsby-cli": "^2.4.11",
+    "gatsby-image": "^2.0.30",
+    "gatsby-plugin-catch-links": "^2.0.11",
+    "gatsby-plugin-favicon": "^3.1.5",
+    "gatsby-plugin-google-analytics": "^2.0.14",
+    "gatsby-plugin-manifest": "^2.0.19",
+    "gatsby-plugin-offline": "^2.0.24",
+    "gatsby-plugin-react-helmet": "^3.0.7",
+    "gatsby-plugin-remove-serviceworker": "^1.0.0",
+    "gatsby-plugin-sass": "^2.0.10",
+    "gatsby-plugin-sharp": "^2.0.22",
+    "gatsby-plugin-sitemap": "^2.0.6",
+    "gatsby-plugin-twitter": "^2.0.9",
+    "gatsby-plugin-web-font-loader": "^1.0.4",
+    "gatsby-source-filesystem": "^2.0.23",
+    "gatsby-transformer-remark": "^2.2.6",
+    "gatsby-transformer-sharp": "^2.1.14",
+    "lodash": "^4.17.11",
+    "node-sass": "^4.11.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-helmet": "^5.2.0"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "devDependencies": {
+    "@commitlint/config-conventional": "^6.1.3",
+    "@commitlint/prompt-cli": "^7.5.0",
+    "commitlint": "^6.2.0",
+    "eslint": "^5.15.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-standard": "^4.0.0",
+    "gatsby-plugin-netlify": "^2.0.11",
+    "gatsby-plugin-netlify-cms": "^3.0.12",
+    "gatsby-plugin-purgecss": "^3.1.0",
+    "husky": "^1.3.1",
+    "netlify-cms": "^2.4.2",
+    "prettier": "^1.16.4"
+  },
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "commit": "commit",
+    "commitmsg": "commitlint -e $GIT_PARAMS",
+    "format": "prettier --write 'src/**/*.js'",
+    "precommit": "yarn run format",
+    "start": "gatsby develop",
+    "nuke": "npm run delete:node_modules",
+    "delete:node_modules": "rm -rf node_modules",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "commitlint": {
+    "extends": [
+      "./@commitlint/config-conventional"
+    ]
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/gbbns/gatsby.gbbns.co.git"
+  }
 }
