--- a/package.json
+++ b/package.json
@@ -55,14 +55,18 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "commit": "commit",
-    "commitmsg": "commitlint -e $GIT_PARAMS",
-    "format": "prettier --write 'src/**/*.js'",
-    "precommit": "yarn run format",
     "start": "gatsby develop",
     "nuke": "npm run delete:node_modules",
     "delete:node_modules": "rm -rf node_modules",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "husky": {
+    "hooks": {
+      "commit": "commit",
+      "commitmsg": "commitlint -e $GIT_PARAMS",
+      "format": "prettier --write 'src/**/*.js'",
+      "precommit": "yarn run format"
+    }
   },
   "commitlint": {
     "extends": [
