--- a/package.json
+++ b/package.json
@@ -58,14 +58,13 @@
     "start": "gatsby develop",
     "nuke": "npm run delete:node_modules",
     "delete:node_modules": "rm -rf node_modules",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write 'src/**/*.js'"
   },
   "husky": {
     "hooks": {
       "commit": "commit",
-      "commitmsg": "commitlint -e $GIT_PARAMS",
-      "format": "prettier --write 'src/**/*.js'",
-      "precommit": "yarn run format"
+      "pre-commit": "npm run format"
     }
   },
   "commitlint": {
