--- a/package.json
+++ b/package.json
@@ -8,49 +8,49 @@
     "url": "https://gbbns.co"
   },
   "dependencies": {
-    "gatsby": "^2.13.25",
-    "gatsby-cli": "^2.7.15",
-    "gatsby-image": "^2.2.6",
-    "gatsby-plugin-catch-links": "^2.1.2",
+    "gatsby": "^2.16.0",
+    "gatsby-cli": "^2.8.0",
+    "gatsby-image": "^2.2.28",
+    "gatsby-plugin-catch-links": "^2.1.14",
     "gatsby-plugin-favicon": "^3.1.5",
-    "gatsby-plugin-google-analytics": "^2.1.4",
-    "gatsby-plugin-manifest": "^2.2.3",
-    "gatsby-plugin-offline": "^2.2.4",
-    "gatsby-plugin-react-helmet": "^3.1.2",
+    "gatsby-plugin-google-analytics": "^2.1.22",
+    "gatsby-plugin-manifest": "^2.2.22",
+    "gatsby-plugin-offline": "^3.0.15",
+    "gatsby-plugin-react-helmet": "^3.1.12",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sass": "^2.1.3",
-    "gatsby-plugin-sharp": "^2.2.7",
-    "gatsby-plugin-sitemap": "^2.2.3",
-    "gatsby-plugin-twitter": "^2.1.2",
+    "gatsby-plugin-sass": "^2.1.19",
+    "gatsby-plugin-sharp": "2.2.30",
+    "gatsby-plugin-sitemap": "^2.2.18",
+    "gatsby-plugin-twitter": "^2.1.11",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-transformer-remark": "^2.6.6",
-    "gatsby-transformer-sharp": "^2.2.3",
-    "lodash": "^4.17.14",
+    "gatsby-source-filesystem": "^2.1.32",
+    "gatsby-transformer-remark": "^2.6.29",
+    "gatsby-transformer-sharp": "^2.2.22",
+    "lodash": "^4.17.15",
     "node-sass": "^4.11.0",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
     "gatsby"
   ],
   "devDependencies": {
-    "@commitlint/config-conventional": "^6.1.3",
-    "@commitlint/prompt-cli": "^7.5.0",
-    "commitlint": "^6.2.0",
-    "eslint": "^5.15.3",
-    "eslint-config-airbnb": "^17.1.1",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-standard": "^4.0.0",
-    "gatsby-plugin-netlify": "^2.1.3",
-    "gatsby-plugin-netlify-cms": "^4.1.6",
+    "@commitlint/config-conventional": "^8.2.0",
+    "@commitlint/prompt-cli": "^8.2.0",
+    "commitlint": "^8.2.0",
+    "eslint": "^6.5.1",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-standard": "^4.0.1",
+    "gatsby-plugin-netlify": "^2.1.20",
+    "gatsby-plugin-netlify-cms": "^4.1.24",
     "gatsby-plugin-page-transitions": "^1.0.7",
-    "gatsby-plugin-purgecss": "^4.0.0",
-    "husky": "^3.0.0",
-    "netlify-cms": "^2.9.6",
+    "gatsby-plugin-purgecss": "^4.0.1",
+    "husky": "^3.0.9",
+    "netlify-cms": "^2.9.7",
     "prettier": "^1.16.4"
   },
   "license": "MIT",
