--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-sharp": "2.2.30",
     "gatsby-plugin-sitemap": "^2.2.18",
     "gatsby-plugin-twitter": "^2.1.11",
+    "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.32",
     "gatsby-transformer-remark": "^2.6.29",
@@ -31,7 +32,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "react-helmet": "^5.2.0"
+    "react-helmet": "^5.2.0",
+    "use-dark-mode": "^2.3.1"
   },
   "keywords": [
     "gatsby"
