--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "url": "https://gbbns.co"
   },
   "dependencies": {
-    "gatsby": "^2.19.17",
-    "gatsby-cli": "^2.8.29",
+    "gatsby": "^2.19.18",
+    "gatsby-cli": "^2.8.30",
     "gatsby-image": "^2.2.41",
     "gatsby-plugin-catch-links": "^2.1.25",
     "gatsby-plugin-favicon": "^3.1.5",
     "gatsby-plugin-google-analytics": "^2.1.35",
     "gatsby-plugin-manifest": "^2.2.41",
-    "gatsby-plugin-offline": "^3.0.34",
+    "gatsby-plugin-offline": "^3.0.35",
     "gatsby-plugin-react-helmet": "^3.1.22",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
     "gatsby-plugin-sass": "^2.1.28",
@@ -25,7 +25,7 @@
     "gatsby-plugin-use-dark-mode": "^1.1.2",
     "gatsby-plugin-web-font-loader": "^1.0.4",
     "gatsby-source-filesystem": "^2.1.48",
-    "gatsby-transformer-remark": "^2.6.51",
+    "gatsby-transformer-remark": "^2.6.52",
     "gatsby-transformer-sharp": "^2.3.14",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.1",
@@ -52,7 +52,8 @@
     "gatsby-plugin-page-transitions": "^1.0.7",
     "gatsby-plugin-purgecss": "^4.0.1",
     "husky": "^4.2.3",
-    "netlify-cms": "^2.10.22",
+    "moment": "^2.24.0",
+    "netlify-cms": "^2.10.23",
     "prettier": "^1.19.1"
   },
   "license": "MIT",
