--- a/package.json
+++ b/package.json
@@ -8,53 +8,50 @@
     "url": "https://gbbns.co"
   },
   "dependencies": {
-    "gatsby": "^2.20.22",
-    "gatsby-cli": "^2.11.9",
-    "gatsby-image": "^2.3.3",
-    "gatsby-plugin-catch-links": "^2.2.2",
-    "gatsby-plugin-favicon": "^3.1.5",
-    "gatsby-plugin-google-analytics": "^2.2.3",
-    "gatsby-plugin-manifest": "^2.3.4",
-    "gatsby-plugin-netlify": "^2.2.2",
-    "gatsby-plugin-netlify-cms": "^4.2.3",
-    "gatsby-plugin-offline": "^3.1.3",
-    "gatsby-plugin-page-transitions": "^1.0.7",
-    "gatsby-plugin-purgecss": "^5.0.0",
-    "gatsby-plugin-react-helmet": "^3.2.3",
+    "gatsby": "^3.7.1",
+    "gatsby-cli": "^3.7.1",
+    "gatsby-plugin-catch-links": "^3.7.1",
+    "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-image": "^1.7.1",
+    "gatsby-plugin-manifest": "^3.7.1",
+    "gatsby-plugin-netlify": "^3.7.1",
+    "gatsby-plugin-offline": "^4.7.1",
+    "gatsby-plugin-page-transitions": "^1.0.8",
+    "gatsby-plugin-purgecss": "^6.0.2",
+    "gatsby-plugin-react-helmet": "^4.7.1",
     "gatsby-plugin-remove-serviceworker": "^1.0.0",
-    "gatsby-plugin-sass": "^2.2.2",
-    "gatsby-plugin-sharp": "2.5.5",
-    "gatsby-plugin-sitemap": "^2.3.3",
-    "gatsby-plugin-twitter": "^2.2.3",
-    "gatsby-plugin-use-dark-mode": "^1.1.2",
+    "gatsby-plugin-sass": "^4.7.1",
+    "gatsby-plugin-sharp": "^3.7.1",
+    "gatsby-plugin-sitemap": "^4.3.1",
+    "gatsby-plugin-twitter": "^3.7.1",
+    "gatsby-plugin-use-dark-mode": "^1.3.0",
     "gatsby-plugin-web-font-loader": "^1.0.4",
-    "gatsby-source-filesystem": "^2.2.3",
-    "gatsby-transformer-remark": "^2.7.2",
-    "gatsby-transformer-sharp": "^2.4.5",
-    "lodash": "^4.17.15",
-    "node-sass": "^4.13.1",
+    "gatsby-source-filesystem": "^3.7.1",
+    "gatsby-transformer-remark": "^4.4.1",
+    "gatsby-transformer-sharp": "^3.7.1",
+    "lodash": "^4.17.21",
+    "sass": "^1.34.1",
     "prop-types": "^15.7.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-helmet": "^6.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
     "use-dark-mode": "^2.3.1"
   },
   "keywords": [
     "gatsby"
   ],
   "devDependencies": {
-    "@commitlint/config-conventional": "^8.3.4",
-    "@commitlint/prompt-cli": "^8.3.5",
-    "commitlint": "^8.3.5",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.1.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.3",
-    "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
-    "moment": "^2.24.0",
-    "netlify-cms": "^2.10.44",
-    "prettier": "^2.0.4"
+    "@commitlint/config-conventional": "^12.1.4",
+    "@commitlint/prompt-cli": "^12.1.4",
+    "commitlint": "^12.1.4",
+    "eslint": "^7.28.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-standard": "^5.0.0",
+    "husky": "^6.0.0",
+    "moment": "^2.29.1",
+    "prettier": "^2.3.1"
   },
   "license": "MIT",
   "scripts": {
